test : 테스트 코드 수정
점검하는 로직은 동일하며, 공통으로 사용하는 테스트 파라미터를 생성했습니다.
테스트 파라미터를 공통으로 사용하면 다른 테스트에 영향을 주는 경우가 있기 때문에
변하지 않는 값에 대해서만 테스트 파라미터를 생성했습니다.